Fix remaining test failures.